--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="C:\Users\Iron Lotus\Pictures\Saved Pictures\it is me_n.jpg" class="auth-image" alt="Josh Romero-Gomez">
+      <img src="C:/Users/endli/Desktop/Homework/Bootstrap-portfolio/pictures/meeeeee.jpg" class="auth-image" alt="Josh Romero-Gomez">
 
       <p>So for starters, welcome to my personal portfolio. I know it is a little bland right now, but as I progress, it shall become a lot more exciting!</p>
 
