--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             <div class="colm-6" id="first">
               <h3>All Mighty Javascript</h3>
               <div class="card1" style="width: 18rem;">
-                <img class="card-img-top" src="C:/Users/endli/Desktop/Homework/Bootstrap-portfolio/pictures/javascript.png"
+                <img class="card-img-top" src="./pictures/javascript.png"
                   id="picures" alt="language">
                 <div class="card-body1">
                   <p class="card-text">Well well well, where to start with Javascript. It is such a broad language that
@@ -71,7 +71,7 @@
             <div class="colm-6" id="second">
               <h3>Node.js</h3>
               <div class="card2" style="width: 18rem;">
-                <img class="card-img-top" src="C:/Users/endli/Desktop/Homework/Bootstrap-portfolio/pictures/node-js-main.jpg"
+                <img class="card-img-top" src="./pictures/node-js-main.jpg"
                   id="picures" alt="language">
                 <div class="card-body2">
                   <p class="card-text">This is my favorite runtime because of the functionality that you are able to do
